ELU, SELU, Sigmoid, SoftPlus and SoftSign layers added (activation)